Bug 1034917 - Make ~nsJSID() protected. r=bholley